Threshold suggestions for column

--- a/main.ipynb
+++ b/main.ipynb
@@ -80,7 +80,7 @@
     "X_train = np.column_stack([trainData[name] for name in feature_names])\n",
     "X_test = np.column_stack([testData[name] for name in feature_names])\n",
     "\n",
-    "del trainData, testData  # Free up memory\n",
+    "del trainData, testData\n",
     "\n",
     "print(\"Length of training data:\", len(X_train))\n",
     "m_train = np.count_nonzero(Y_train == 1)\n",
@@ -111,16 +111,35 @@
    "execution_count": null,
    "id": "e317e210",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.float32(13.24), np.float32(0.123607635), np.float32(0.81962776), np.float32(1.5156479), np.float32(2.211666), np.float32(2.9076862), np.float32(3.6037064), np.float32(4.2997265), np.float32(4.9957466), np.float32(5.691765), np.float32(6.387785), np.float32(7.083805), np.float32(7.779825), np.float32(8.475844), np.float32(9.1718645), np.float32(9.867884), np.float32(10.563904), np.float32(11.259924), np.float32(11.955943), np.float32(12.651963), np.float32(13.347982), np.float32(14.044003), np.float32(14.740023), np.float32(15.436042), np.float32(16.132061), np.float32(16.828081), np.float32(17.524101), np.float32(18.220121), np.float32(18.916142), np.float32(19.61216), np.float32(20.30818), np.float32(21.0042), np.float32(21.70022), np.float32(22.39624), np.float32(23.092258), np.float32(23.788279), np.float32(24.484299), np.float32(25.180319), np.float32(25.876339), np.float32(26.572357), np.float32(27.268377)]\n"
+     ]
+    }
+   ],
    "source": [
     "MAX_DEPTH = 10              #Maximum depth of decision tree\n",
-    "\n"
+    "\n",
+    "#Suggest possible thresholds using mean, median, some intervals SD away from mean for category\n",
+    "def possibleThreshold(xVals):\n",
+    "    mean = np.mean(xVals)\n",
+    "    sd = np.std(xVals)\n",
+    "    thresholds = [np.median(xVals)]\n",
+    "    intervals = np.arange(-4,4,0.2).tolist()\n",
+    "    for i in range(0,len(intervals)):\n",
+    "        thresholds.append(mean+intervals[i]*sd)\n",
+    "    return thresholds\n",
+    "\n",
+    "print(possibleThreshold(X_train[:, 0]))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scc-222",
+   "display_name": "scc-322",
    "language": "python",
    "name": "python3"
   },
