Count types function

--- a/main.ipynb
+++ b/main.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e317e210",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[np.float32(13.24), np.float32(0.123607635), np.float32(0.81962776), np.float32(1.5156479), np.float32(2.211666), np.float32(2.9076862), np.float32(3.6037064), np.float32(4.2997265), np.float32(4.9957466), np.float32(5.691765), np.float32(6.387785), np.float32(7.083805), np.float32(7.779825), np.float32(8.475844), np.float32(9.1718645), np.float32(9.867884), np.float32(10.563904), np.float32(11.259924), np.float32(11.955943), np.float32(12.651963), np.float32(13.347982), np.float32(14.044003), np.float32(14.740023), np.float32(15.436042), np.float32(16.132061), np.float32(16.828081), np.float32(17.524101), np.float32(18.220121), np.float32(18.916142), np.float32(19.61216), np.float32(20.30818), np.float32(21.0042), np.float32(21.70022), np.float32(22.39624), np.float32(23.092258), np.float32(23.788279), np.float32(24.484299), np.float32(25.180319), np.float32(25.876339), np.float32(26.572357), np.float32(27.268377)]\n"
+      "[np.float32(13.24), np.float32(0.123607635), np.float32(0.81962776), np.float32(1.5156479), np.float32(2.211666), np.float32(2.9076862), np.float32(3.6037064), np.float32(4.2997265), np.float32(4.9957466), np.float32(5.691765), np.float32(6.387785), np.float32(7.083805), np.float32(7.779825), np.float32(8.475844), np.float32(9.1718645), np.float32(9.867884), np.float32(10.563904), np.float32(11.259924), np.float32(11.955943), np.float32(12.651963), np.float32(13.347982), np.float32(14.044003), np.float32(14.740023), np.float32(15.436042), np.float32(16.132061), np.float32(16.828081), np.float32(17.524101), np.float32(18.220121), np.float32(18.916142), np.float32(19.61216), np.float32(20.30818), np.float32(21.0042), np.float32(21.70022), np.float32(22.39624), np.float32(23.092258), np.float32(23.788279), np.float32(24.484299), np.float32(25.180319), np.float32(25.876339), np.float32(26.572357), np.float32(27.268377)]\n",
+      "[288, 167]\n"
      ]
     }
    ],
@@ -133,7 +134,19 @@
     "        thresholds.append(mean+intervals[i]*sd)\n",
     "    return thresholds\n",
     "\n",
-    "print(possibleThreshold(X_train[:, 0]))"
+    "print(possibleThreshold(X_train[:, 0]))\n",
+    "\n",
+    "#Counts types in xData subsection and returns them in [number of benign, number of malignant] format\n",
+    "#i.e. [1,3] means that there is one benign datapoint and three malignant datapoints within the given subset\n",
+    "def countTypes(xData):\n",
+    "    sN = []\n",
+    "    for i in range (0,2):\n",
+    "        type = np.where(xData==i)\n",
+    "        #type = np.where(xData[:,-1]==i)\n",
+    "        sN.append(len(type[0]))\n",
+    "    return(sN)\n",
+    "\n",
+    "print(countTypes(Y_train))"
    ]
   }
  ],
